# python-project-lvl3

./: .coverage  .gitignore  Makefile  README.md  file_path  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  download.py  parsing.py
page_loader/scripts/: script_loader.py
tests/: stackoverflow-com.html  test_download.py  www-sports-ru-tribuna-blogs-odukhevremeni-3059618-html.html
tests/fixtures/: img_test_before.html
tests/www-sports-ru-tribuna-blogs-odukhevremeni-3059618-html_files/: www-sports-ru-amp-post-3059618-.html  www-sports-ru-rss-topnews.xml  www-sports-ru-tribuna-blogs-odukhevremeni-3059618.html
