[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.script_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
requests = "^2.28.1"
requests-mock = "^1.9.3"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
